# pychpp

./: .gitlab-ci.yml  LICENSE  README.md  barrages.py  chpp.py  pyproject.toml
pychpp/: HTAge.py  HTSkill.py  __init__.py  chpp.py  error.py  ht_age.py  ht_arena.py  ht_challenge.py  ht_date.py  ht_datetime.py  ht_error.py  ht_league.py  ht_match.py  ht_match_lineup.py  ht_matches_archive.py  ht_matches_archives.py  ht_model.py  ht_national_teams.py  ht_player.py  ht_rank.py  ht_region.py  ht_skill.py  ht_team.py  ht_training.py  ht_transfer.py  ht_transfers_team.py  ht_user.py  ht_world.py  ht_world_cup.py  ht_xml.py
pychpp/fixtures/: ht_datetime.py  ht_error.py
pychpp/models/: ht_field.py  ht_init_var.py  ht_model.py  ht_version.py  ht_xml.py
tests/: conftest.py  fixtures.py  test_chpp_access.py  test_custom_ht_arena.py  test_custom_ht_challenge.py  test_custom_ht_league.py  test_custom_ht_league_unit.py  test_custom_ht_match.py  test_custom_ht_match_lineup.py  test_custom_ht_matches_archive.py  test_custom_ht_region.py  test_custom_ht_team.py  test_custom_ht_user.py  test_custom_ht_youth_team.py  test_ht_datetime.py  test_match_orders.py  test_national_players.py  test_national_team_matches.py  test_pychpp.py  test_xml_alliance_details.py  test_xml_avatars.py  test_xml_bookmarks.py  test_xml_club.py  test_xml_cup_matches.py  test_xml_current_bids.py  test_xml_economy.py  test_xml_fans.py  test_xml_hof_players.py  test_xml_ladder_details.py  test_xml_ladder_list.py  test_xml_league_fixtures.py  test_xml_league_levels.py  test_xml_live.py  test_xml_manager_compendium.py  test_xml_match_details.py  test_xml_matches.py  test_xml_matches_archive.py  test_xml_national_team_details.py  test_xml_national_teams.py  test_xml_player_events.py  (+24 more)
tests/test_resources/: arenadetails_arenaID_591993.xml  (+89 more)
(+112 files in other folders)
