[tool.poetry]
name = "pychpp"
version = "0.3.12"
description = "framework created to use the API provided by the online game Hattrick"
license = "Apache-2.0"
authors = ["Pierre Gobin <dev@pierregobin.fr>"]
readme = "README.md"
homepage = "https://framagit.org/Pierre86/pychpp"


[tool.poetry.dependencies]
python = "^3.8"
rauth = "^0.7.3"
pytz = "^2024.2"
Werkzeug = "^2.2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-dotenv = "^0.5.2"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
