[tool.poetry]
name = "pychpp"
version = "0.5.5"
description = "framework created to use the API provided by the online game Hattrick"
license = "Apache-2.0"
authors = ["Pierre Gobin <p.dev@gobin.cc>"]
readme = "README.md"
homepage = "https://framagit.org/Pierre86/pychpp"


[tool.poetry.dependencies]
python = "^3.9"
pytz = "^2025.1"
Werkzeug = "^3.1.3"
requests-oauthlib = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-dotenv = "^0.5.2"
flake8 = "^7.1.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
